Improve similarity description

--- a/bib_dl.bib
+++ b/bib_dl.bib
@@ -315,7 +315,8 @@
   year={2013}
 }
 
-@article{abalov_14_aut,
+@article{abalov_14_auto,
   title={Automated grouping of decomposition components of time series for singular spectrum analysis},
-  author={Abalov, NV and Gubarev, VV}
+  author={Abalov, NV and Gubarev, VV},
+  year={2014}
 }
